# epitome

./: CLAUDE.md  README.md  modal_sweep.py  pyproject.toml  smoke_test_mps.py
epitome/: __init__.py  conversion.py  dataset.py  experiment.py  generators.py  metrics.py  models.py  tuning.py
epitome/test/: models_test.py  tuning_test.py
