[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epitome"
version = "0.0.3"
description = "ML model for predicting ChIP-seq peaks in new cell types from ENCODE cell lines"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alyssa Kramer Morrow", email = "akmorrow@berkeley.edu" }]
requires-python = ">=3.9"
keywords = ["ENCODE", "ChIP-seq", "peaks", "prediction", "histone", "transcription_factor"]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pyyaml",
    "seaborn>=0.11.2",
    "matplotlib>=3.4.3",
    "scikit-learn",
    "tqdm",
    "pyranges>=0.0.104",
    "h5py",
    "torch",
    "pandas",
    "scipy",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Documentation = "https://epitome.readthedocs.io/en/latest/"
Source = "https://github.com/samuelstanton/epitome"

[tool.hatch.build.targets.wheel]
packages = ["epitome"]
